# goat

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh  release.toml
.github/workflows/: ci.yml  release.yml
crates/goat-brain/: Cargo.toml
crates/goat-brain/src/: lib.rs
crates/goat-bus/: Cargo.toml
crates/goat-bus/src/: lib.rs
crates/goat-channel/: Cargo.toml
crates/goat-channel-discord/: Cargo.toml
crates/goat-channel-discord/src/: channel.rs  config.rs  handle.rs  inbound.rs  interaction.rs  lib.rs
crates/goat-channel-telegram/: Cargo.toml
crates/goat-channel-telegram/src/: channel.rs  config.rs  handle.rs  inbound.rs  lib.rs
crates/goat-channel/src/: lib.rs  test_support.rs  typing.rs
crates/goat-command/: Cargo.toml
crates/goat-command-skill/: Cargo.toml
crates/goat-command-skill/src/: lib.rs
crates/goat-command/src/: lib.rs
crates/goat-config/: Cargo.toml
crates/goat-config/src/: lib.rs
crates/goat-credentials/: Cargo.toml
crates/goat-credentials/src/: lib.rs
crates/goat-credentials/tests/: permissions.rs
crates/goat-evaluator/: Cargo.toml
crates/goat-evaluator/src/: lib.rs
crates/goat-llm/: Cargo.toml
crates/goat-llm-anthropic/: Cargo.toml
crates/goat-llm-anthropic/src/: body.rs  diagnostics.rs  error.rs  lib.rs  models.rs  provider.rs  stream.rs
crates/goat-llm-codex/: Cargo.toml
crates/goat-llm-codex/examples/: stream.rs
crates/goat-llm-codex/src/: auth.rs  body.rs  credential.rs  diagnostics.rs  error.rs  lib.rs  models.rs  provider.rs  setup.rs  stream.rs  summarize.rs
crates/goat-llm-gemini/: Cargo.toml
crates/goat-llm-gemini/src/: body.rs  diagnostics.rs  error.rs  lib.rs  models.rs  provider.rs  stream.rs
crates/goat-llm-moonshot/: Cargo.toml
crates/goat-llm-moonshot/src/: body.rs  diagnostics.rs  error.rs  lib.rs  models.rs  provider.rs  stream.rs
crates/goat-llm-openai/: Cargo.toml
crates/goat-llm-openai/src/: body.rs  diagnostics.rs  embedding.rs  error.rs  lib.rs  models.rs  provider.rs  stream.rs
crates/goat-llm-zhipu/: Cargo.toml
crates/goat-llm-zhipu/src/: body.rs  diagnostics.rs  error.rs  lib.rs  models.rs  provider.rs  stream.rs
crates/goat-llm/src/: chunk.rs  credentials.rs  embedding.rs  error.rs  key.rs  lib.rs  model.rs  provider.rs  request.rs  response.rs
crates/goat-llm/src/credential/: api_key_pool.rs  mod.rs  refreshable.rs
crates/goat-llm/src/setup/: mod.rs  secret_prompt.rs
crates/goat-loop/: Cargo.toml
crates/goat-loop/src/: backoff.rs  cron_expr.rs  lib.rs  scheduler.rs
crates/goat-memory/: Cargo.toml
crates/goat-memory/src/: embed.rs  index.rs  lib.rs
crates/goat-persona/: Cargo.toml
crates/goat-persona/src/: lib.rs
crates/goat-plugin/: Cargo.toml
crates/goat-plugin/src/: lib.rs
crates/goat-render/: Cargo.toml
crates/goat-render/src/: lib.rs
crates/goat-runtime/: Cargo.toml
crates/goat-runtime/src/: lib.rs
crates/goat-skills/: Cargo.toml
crates/goat-skills/src/: lib.rs
crates/goat-store/: Cargo.toml
crates/goat-store/migrations/: 0001_init.sql  0002_memory.sql  0003_signal_log.sql  0004_evaluator.sql  0005_tool_invocations.sql  0006_scheduled_tasks.sql  0007_conversation_summary.sql
crates/goat-store/src/: lib.rs
crates/goat-tool/: Cargo.toml
crates/goat-tool-echo/: Cargo.toml
crates/goat-tool-echo/src/: lib.rs
crates/goat-tool-fs/: Cargo.toml
crates/goat-tool-fs/src/: common.rs  edit.rs  glob.rs  grep.rs  lib.rs  read.rs  write.rs
crates/goat-tool-memory/: Cargo.toml
crates/goat-tool-memory/src/: lib.rs
crates/goat-tool-pty/: Cargo.toml
crates/goat-tool-pty/src/: keys.rs  lib.rs  manager.rs  tool.rs
crates/goat-tool-schedule/: Cargo.toml
crates/goat-tool-schedule/src/: lib.rs
crates/goat-tool-shell/: Cargo.toml
crates/goat-tool-shell/src/: lib.rs  shell.rs
crates/goat-tool-skill/: Cargo.toml
crates/goat-tool-skill/src/: lib.rs  skill.rs
crates/goat-tool/src/: command_safety.rs  lib.rs
crates/goat-types/: Cargo.toml
crates/goat-types/src/: lib.rs
docs/research/: hermes-agent.md  openclaw.md
src/: main.rs
src/cli/: doctor.rs  mod.rs  persona.rs  provider.rs  setup.rs  skill.rs  ui.rs
