[package]
name = "goat-brain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-command = { workspace = true }
goat-types   = { workspace = true }
goat-llm     = { workspace = true }
goat-channel = { workspace = true }
goat-render  = { workspace = true }
goat-store   = { workspace = true }
goat-bus     = { workspace = true }
goat-persona = { workspace = true }
goat-tool    = { workspace = true }
goat-skills  = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
futures      = { workspace = true }
chrono       = { workspace = true }
serde_json   = { workspace = true }
