[package]
name = "goat-bus"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-types  = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
chrono      = { workspace = true }
serde_json  = { workspace = true }
