[package]
name = "goat-channel-discord"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-types       = { workspace = true }
goat-channel     = { workspace = true }
twilight-gateway = { workspace = true }
twilight-http    = { workspace = true }
twilight-model   = { workspace = true }
tokio            = { workspace = true }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
inventory        = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
futures          = { workspace = true }
url              = { workspace = true }
