[package]
name = "goat-channel-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-command = { workspace = true }
goat-types   = { workspace = true }
goat-channel = { workspace = true }
teloxide     = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
inventory    = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
futures      = { workspace = true }
