[package]
name = "goat-command-skill"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-command = { workspace = true }
goat-skills  = { workspace = true }
goat-types   = { workspace = true }
async-trait  = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
inventory    = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
