[package]
name = "goat-command"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-types = { workspace = true }
async-trait = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
inventory  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
