[package]
name = "goat-command"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-types = { workspace = true }
async-trait = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
inventory  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
