[package]
name = "goat-credentials"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-llm    = { workspace = true }
serde_json  = { workspace = true }
tempfile    = { workspace = true }
tracing     = { workspace = true }
