[package]
name = "goat-credentials"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-llm    = { workspace = true }
serde_json  = { workspace = true }
tempfile    = { workspace = true }
tracing     = { workspace = true }
