[package]
name = "goat-evaluator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-types  = { workspace = true }
goat-llm    = { workspace = true }
async-trait = { workspace = true }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true }
