[package]
name = "goat-llm-gemini"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-types         = { workspace = true }
goat-llm           = { workspace = true }
reqwest            = { workspace = true }
eventsource-stream = { workspace = true }
futures            = { workspace = true }
async-trait        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tokio              = { workspace = true }
inventory          = { workspace = true }
async-stream       = { workspace = true }
