[package]
name = "goat-loop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-types   = { workspace = true }
goat-bus     = { workspace = true }
goat-store   = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
cron         = { workspace = true }
blake3       = "1"
