[package]
name = "goat-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-types  = { workspace = true }
goat-store  = { workspace = true }
async-trait = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
tracing     = { workspace = true }
futures     = { workspace = true }

[dev-dependencies]
tempfile = "3"
