[package]
name = "goat-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-command = { workspace = true }
goat-types            = { workspace = true }
goat-bus              = { workspace = true }
goat-store            = { workspace = true }
goat-memory           = { workspace = true }
goat-evaluator        = { workspace = true }
goat-config           = { workspace = true }
goat-credentials      = { workspace = true }
goat-llm              = { workspace = true }
goat-channel          = { workspace = true }
goat-render           = { workspace = true }
goat-plugin           = { workspace = true }
goat-tool             = { workspace = true }
goat-tool-schedule    = { workspace = true }
goat-tool-memory      = { workspace = true }
goat-tool-pty         = { workspace = true }
goat-loop             = { workspace = true }
goat-skills           = { workspace = true }
goat-brain            = { workspace = true }
goat-persona          = { workspace = true }
chrono                = { workspace = true }
tokio                 = { workspace = true }
tokio-util            = { workspace = true }
async-trait           = { workspace = true }
anyhow                = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }
tracing-appender      = { workspace = true }
inventory             = { workspace = true }
futures               = { workspace = true }
uuid                  = { workspace = true }
serde_json            = { workspace = true }

[dev-dependencies]
tempfile              = { workspace = true }
