[package]
name = "goat-tool-echo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-tool   = { workspace = true }
async-trait = { workspace = true }
serde_json  = { workspace = true }
inventory   = { workspace = true }
