[package]
name = "goat-tool-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-tool   = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
inventory   = { workspace = true }
walkdir     = { workspace = true }
globset     = { workspace = true }
regex       = { workspace = true }

[dev-dependencies]
goat-types = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
