[package]
name = "goat-tool-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-tool   = { workspace = true }
goat-memory = { workspace = true }
goat-types  = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
goat-store = { workspace = true }
tempfile   = "3"
tokio      = { workspace = true }
