[package]
name = "goat-tool-pty"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-tool    = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
pty-process  = { workspace = true }
vt100        = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
goat-types   = { workspace = true }
tempfile     = { workspace = true }
tokio        = { workspace = true, features = ["rt", "macros"] }
