[package]
name = "goat-tool-schedule"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-tool   = { workspace = true }
goat-store  = { workspace = true }
goat-loop   = { workspace = true }
goat-types  = { workspace = true }
async-trait = { workspace = true }
chrono      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio    = { workspace = true }
