[package]
name = "goat-tool-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-tool   = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
inventory   = { workspace = true }

[dev-dependencies]
goat-types = { workspace = true }
tempfile = "3"
