[package]
name = "goat-tool-skill"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-types   = { workspace = true }
goat-tool    = { workspace = true }
goat-skills  = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
inventory    = { workspace = true }
tokio        = { workspace = true }
