[package]
name = "goat-tool-skill"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
goat-types   = { workspace = true }
goat-tool    = { workspace = true }
goat-skills  = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
inventory    = { workspace = true }
tokio        = { workspace = true }
